[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pypardiso"
authors = [
    {name = "Adrian Haas"}
]
description = "Python interface to the Intel MKL Pardiso library to solve large sparse linear systems of equations"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pardiso", "sparse solver"]
license = {file = "LICENSE.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dynamic = ["version"]
dependencies = [
  "mkl<2024",
  "numpy",
  "scipy"
]

[project.urls]
Homepage = "https://github.com/haasad/PyPardiso"
Repository = "https://github.com/haasad/PyPardiso.git"
Changelog = "https://github.com/haasad/PyPardiso/releases"

[tool.setuptools_scm]
normalize = true
